--- a/style.css
+++ b/style.css
@@ -6,3 +6,15 @@
     border-top : solid grey 1px;
     padding: 30px;
 }
+
+input {
+    height: 50px;
+    width: 100%;
+    padding: 6px;
+    margin-top: 10px;
+    font-size: 2.4em;
+    border: none;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: green
+    
+  }
