--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ textarea {
     font-size: 2.4em;
     border: none;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: green
+    background-color: grey;
     
   }
 
